<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/Homelayout"

        >

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/txtlayInMeterNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            android:hint="@string/meterNo"
            app:helperText="@string/meterNo"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_camera"
            app:counterEnabled="true"
            app:counterMaxLength="40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtMeterNo"
                android:maxLength="40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionSearch"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/txtLayInCustName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/CostmerName"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:helperText="@string/CostmerName"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_person"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25"
            app:layout_constraintWidth_percent=".8"
            app:counterEnabled="true"
            app:counterMaxLength="40"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtCustomerName"
                android:maxLength="40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/txtLayInRead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            android:hint="@string/MeterRead"
            app:helperText="@string/MeterRead"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent=".8"
            app:counterMaxLength="40"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtReadNo"
                android:maxLength="40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>





        <Button
            android:id="@+id/btnGetImageRead"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/menuback"
            android:text="@string/openCammer"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_camera"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="@color/teal_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.73"
            app:layout_constraintWidth_percent=".8">

        </Button>

        <Button
            android:id="@+id/btnsave"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/menuback"
            android:text="@string/btnSave"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_save"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="@color/teal_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9"
            app:layout_constraintWidth_percent=".3">

        </Button>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/menuback"
            android:text="@string/btnCancel"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_cancel"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="@color/teal_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9"
            app:layout_constraintWidth_percent=".3">

        </Button>








    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>